--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"><head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -26,30 +26,17 @@ $(document).ready(function(){
 			    <small class="text-muted">`+field.category.name+`</small>
 			  </div>
 			</div>
-
 		</div>
-		      `
       	$(".content").append(cardHTML);
-
-
       });
     });
-
 });
 </script>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
   <span class="navbar-brand mb-0 h1">Latest</span>
-
 </nav>
-
-
 <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 content px-4"></div>
-
 </body>
 </html>
-
-
-
-
