--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"><head>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -11,22 +12,18 @@ $(document).ready(function(){
     $.getJSON("https://dljd7hp84g.execute-api.us-east-1.amazonaws.com/beta/v1/posts?count=100", function(result){
       $.each(result.posts, function(i, field){
       	cardHTML = `
-
 		<div class="col">
 			<div class="card bg-dark text-white mt-4 mb-1">
 			  <img src="`+field.image.replace('img.allw.mn','resize.img.allw.mn')+`?width=600&height=600" class="card-img" alt="...">
 			  <div class="card-img-overlay">
-			  	
 			  	<a href="`+field.url+`" class="btn btn-outline-light btn-sm active mb-2" role="button" aria-pressed="true">Open</a>
-			  	
 			    <h6 class="card-title">`+field.title+`</h6>
-
 			  </div>
 			  <div class="card-footer">
 			    <small class="text-muted">`+field.category.name+`</small>
 			  </div>
 			</div>
-		</div>
+		</div>`
       	$(".content").append(cardHTML);
       });
     });
