--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</head>
+<body>
+<nav class="navbar navbar-dark bg-dark">
+  <span class="navbar-brand mb-0 h1">Latest</span>
+</nav>
+<div class="card-columns pt-4 pl-4 row justify-content-md-center row-cols-xs-1 row-cols-2 row-cols-sm-3 row-cols-lg-5 w-100 content"></div>
 <script>
 $(document).ready(function(){
   
     $.getJSON("https://dljd7hp84g.execute-api.us-east-1.amazonaws.com/beta/v1/posts?count=100", function(result){
       $.each(result.posts, function(i, field){
       	cardHTML = `
-		<div class="col">
-			<div class="card bg-dark text-white mt-4 mb-1">
+		<div class="col-md-4 mb-4">
+			<div class="card bg-dark text-white">
 			  <img src="`+field.image.replace('img.allw.mn','resize.img.allw.mn')+`?width=600&height=600" class="card-img" alt="...">
 			  <div class="card-img-overlay">
 			  	<a href="`+field.url+`" class="btn btn-outline-light btn-sm active mb-2" role="button" aria-pressed="true">Open</a>
@@ -29,11 +35,5 @@ $(document).ready(function(){
     });
 });
 </script>
-</head>
-<body>
-<nav class="navbar navbar-dark bg-dark">
-  <span class="navbar-brand mb-0 h1">Latest</span>
-</nav>
-<div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 content px-4"></div>
 </body>
 </html>
