--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -11,10 +12,9 @@
 <nav class="navbar navbar-dark bg-dark">
   <span class="navbar-brand mb-0 h1">Latest</span>
 </nav>
-<div class="card-columns pt-4 pl-4 row justify-content-md-center row-cols-xs-1 row-cols-2 row-cols-sm-3 row-cols-lg-5 w-100 content"></div>
+<div class="card-columns pt-4 pl-4 row justify-content-md-center row-cols-1 row-cols-sm-2 row-cols-lg-4 row-cols-xl-5 w-100 content"></div>
 <script>
 $(document).ready(function(){
-  
     $.getJSON("https://dljd7hp84g.execute-api.us-east-1.amazonaws.com/beta/v1/posts?count=100", function(result){
       $.each(result.posts, function(i, field){
       	cardHTML = `
@@ -22,8 +22,9 @@ $(document).ready(function(){
 			<div class="card bg-dark text-white">
 			  <img src="`+field.image.replace('img.allw.mn','resize.img.allw.mn')+`?width=600&height=600" class="card-img" alt="...">
 			  <div class="card-img-overlay">
-			  	<a href="`+field.url+`" class="btn btn-outline-light btn-sm active mb-2" role="button" aria-pressed="true">Open</a>
+			  	<a href="`+field.url+`" class="text-white shadow-sm">
 			    <h6 class="card-title">`+field.title+`</h6>
+			    </a>
 			  </div>
 			  <div class="card-footer">
 			    <small class="text-muted">`+field.category.name+`</small>
